# compare_2_courses

./: .gitignore  README.md  examples.ipynb  pyproject.toml
compare_2_courses/: constants.py
compare_2_courses/analytics/: analyzer.py  compare_report.py
compare_2_courses/schemas/: course.py  learning_platform.py
compare_2_courses/schemas/course_content/: __init__.py  course_material.py  lab.py  reading.py  test.py  utils.py  video.py
compare_2_courses/scrape/: course_scraper.py  scraper_config.py  udemy_config.py  udemy_scraper.py  utils.py
data/: AWS Certified Data Engineer Associate 2024 - Hands On!.json  AWS Certified DevOps Engineer Professional 2024 - DOP-C02.json  Ultimate AWS Certified Security Specialty [NEW 2024] SCS-C02.json  Ultimate AWS Certified Solutions Architect Associate SAA-C03.json  Ultimate AWS Certified Solutions Architect Professional 2024.json
